# ccc

./: .dockerignore  .gitignore  README.md  app.py  pyproject.toml  rxconfig.py
.github/actions/: workflow.yaml
ccc/: config.py  constants.py
ccc/api/: scheduler.py
ccc/cli/: main.py
ccc/components/: auth.py  endpoints.py  handler.py  scheduler.py
ccc/components/models/: config.py  prompt.py  workflow.py
ccc/components/orm/: __init__.py  db.py  tables.py
ccc/components/workflows/: factory.py  nodes.py
ccc/components/workflows/txt2img/: sd15.py
ccc/components/ws/: __init__.py
ccc/interface/: main.py
ccc/interface/pages/: __init__.py  index.py  login.py
ccc/interface/parts/: menu.py
ccc/middleware/auth/: __init__.py  helpers.py
ccc/models/: base.py  config.py  enums.py  prompt.py  types.py  workflow.py
ccc/models/orm/: db.py  tables.py
ccc/pages/: __init__.py  index.py
ccc/runtime/: handler.py
ccc/runtime/workflows/: factory.py
ccc/runtime/workflows/txt2img/: sd15.py
ccc/utils/: seed.py  storage.py
docker/: Dockerfile  Dockerfile.comfyui  Dockerfile.tools  docker-compose.yaml
scripts/: env  lint  run-app  start-app
scripts/util/: build  tools
tests/: test_scheduler.py
tests/unit/: conftest.py  test_scheduler.py
tests/unit/fixtures/: __init__.py  common.py  workflow.py
tests/unit/workflows/: test_base_workflows.py
