[project]
name = "ccc"
version = "0.1.0"
description = "Cursed Content Creator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.24.1",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
]
